Fixed overflow display

--- a/style.css
+++ b/style.css
@@ -86,8 +86,9 @@ align-items: center;
 font-size: 2.5em;
 font-weight: 600;
 padding-left: 5px;
+}
+#resultElt {
 overflow: hidden ;
-direction: rtl;
 }
 
 #buttons {
